--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <link href="https://fonts.googleapis.com/css?family=Orbitron:400,700&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/1916f943e3.js" crossorigin="anonymous"></script>
     <title>Buscador personajes Rick y Morty</title>
   </head>
